infra/k8s/barcode-checker-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barcode-checker-depl
spec:
  replicas: 1 #replicas of pods
  selector:
    matchLabels:
      app: barcode-checker
  template:
    metadata:
      labels:
        app: barcode-checker
    spec:
      containers:
        - name: barcode-checker
          image: mahmoudeid9/barcode-checker #container hosted on dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: barcode-checker-srv #name of service
spec:
  selector:
    app: barcode-checker # name of deployment we attach this service to sg
  ports:
  - name: barcode-checker
    protocol: TCP
    port: 3004 # the exposed port
    targetPort: 3004 # targeted port inside the deployment
