infra/k8s/doc-app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-app-depl
spec:
  replicas: 1 #replicas of pods
  selector:
    matchLabels:
      app: doc-app
  template:
    metadata:
      labels:
        app: doc-app
    spec:
      containers:
        - name: doc-app
          image: mahmoudeid9/doc-app #container hosted on dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: doc-app-srv #name of service
spec:
  selector:
    app: doc-app # name of deployment we attach this service to
  ports:
  - name: doc-app
    protocol: TCP
    port: 3007 # the exposed port
    targetPort: 3007 # targeted port inside the deployment
