infra/k8s/image-recog-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-recog-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-recog
  template:
    metadata:
      labels:
        app: image-recog
    spec:
      containers:
        - name: image-recog
          image: mahmoudeid9/image-recog
---
apiVersion: v1
kind: Service
metadata:
  name: image-recog-srv
spec:
  selector:
    app: image-recog
  ports:
  - name: image-recog
    protocol: TCP
    port: 3002
    targetPort: 3002
