infra/k8s/med-reminder-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: med-reminder-depl
spec:
  replicas: 1 #replicas of pods
  selector:
    matchLabels:
      app: med-reminder
  template:
    metadata:
      labels:
        app: med-reminder
    spec:
      containers:
        - name: med-reminder
          image: mahmoudeid9/med-reminder #container hosted on dockerhub
---
apiVersion: v1
kind: Service
metadata:
  name: med-reminder-srv #name of service
spec:
  selector:
    app: med-reminder # name of deployment we attach this service to
  ports:
  - name: med-reminder
    protocol: TCP
    port: 3005 # the exposed port
    targetPort: 3005 # targeted port inside the deployment
