infra/k8s/sym-checker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sym-checker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sym-checker
  template:
    metadata:
      labels:
        app: sym-checker
    spec:
      containers:
        - name: sym-checker
          image: mahmoudeid9/sym-checker
---
apiVersion: v1
kind: Service
metadata:
  name: sym-checker-srv
spec:
  selector:
    app: sym-checker
  ports:
  - name: sym-checker
    protocol: TCP
    port: 3003
    targetPort: 3003
