infra/k8s/weight-mon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weight-mon-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weight-mon
  template:
    metadata:
      labels:
        app: weight-mon
    spec:
      containers:
        - name: weight-mon
          image: mahmoudeid9/weight-mon
---
apiVersion: v1
kind: Service
metadata:
  name: weight-mon-srv
spec:
  selector:
    app: weight-mon
  ports:
  - name: weight-mon
    protocol: TCP
    port: 3006
    targetPort: 3006
